5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1616_2927.log
== SUBMITION (2019-04-01 15:14:36) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total=v*q
print(round(total, 2)
-- EXECUTION TIME:
0.18823
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:14:52) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= v*q
print(round(total, 2)
-- EXECUTION TIME:
0.177156
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:15:50) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= v * q
print(round(total, 2)
-- EXECUTION TIME:
0.186206
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:16:03) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= v*q
print(round(total, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:23:35) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= preco final
print(round(total, 2)
-- EXECUTION TIME:
0.195559
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 3
    total= preco final
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:24:19) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= v ** q
print(round(total, 2)
-- EXECUTION TIME:
0.130915
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:24:20) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= v ** q
print(round(total, 2)
-- EXECUTION TIME:
0.181563
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:24:29) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= v * q
print(round(total, 2)
-- EXECUTION TIME:
0.127789
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:24:38) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= v**q
print(round(total, 2)
-- EXECUTION TIME:
0.141666
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:24:39) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= v**q
print(round(total, 2)
-- EXECUTION TIME:
0.146337
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:24:48) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= v*q
print(round(total, 2))
-- EXECUTION TIME:
0.158132
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
14.0
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:24:50) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= v*q
print(round(total, 2))
-- EXECUTION TIME:
0.158092
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
14.0
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:25:12) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= (v*q)
print(round(total, 2))
-- EXECUTION TIME:
0.142909
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
14.0
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:25:13) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= (v*q)
print(round(total, 2))
-- EXECUTION TIME:
0.232503
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
14.0
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:25:42) 
-- CODE:
v=float(input("valor da bebida: "))
q=float(input("quantidade das esfirras: "))
total= v*q
print(round(total, 2))
-- EXECUTION TIME:
0.217206
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
14.0
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:27:03) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= v+q
print(round(total, 2))
-- EXECUTION TIME:
0.138778
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
7.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:27:04) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
total= v+q
print(round(total, 2))
-- EXECUTION TIME:
0.16818
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
7.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:30:34) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
e=float(input("preco da esfirra: "))
total= v+q*e
print(round(total, 2))
-- EXECUTION TIME:
0.204602
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2927/main.py", line 3, in <module>
    e=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:30:36) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
e=float(input("preco da esfirra: "))
total= v+q*e
print(round(total, 2))
-- EXECUTION TIME:
0.194445
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2927/main.py", line 3, in <module>
    e=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:30:37) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
e=float(input("preco da esfirra: "))
total= v+q*e
print(round(total, 2))
-- EXECUTION TIME:
0.109483
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2927/main.py", line 3, in <module>
    e=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:30:37) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
e=float(input("preco da esfirra: "))
total= v+q*e
print(round(total, 2))
-- EXECUTION TIME:
0.0915179
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1616/2927/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:30:38) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
e=float(input("preco da esfirra: "))
total= v+q*e
print(round(total, 2))
-- EXECUTION TIME:
0.202393
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2927/main.py", line 3, in <module>
    e=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:30:38) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
e=float(input("preco da esfirra: "))
total= v+q*e
print(round(total, 2))
-- EXECUTION TIME:
0.18148
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2927/main.py", line 3, in <module>
    e=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:30:38) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
e=float(input("preco da esfirra: "))
total= v+q*e
print(round(total, 2))
-- EXECUTION TIME:
0.320536
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2927/main.py", line 3, in <module>
    e=float(input("preco da esfirra: "))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:33:19) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
p=float(input("preco a ser pago: ")
print(round(p, 2))
-- EXECUTION TIME:
0.13823
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 4
    print(round(p, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:33:20) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade das esfirras: "))
p=float(input("preco a ser pago: ")
print(round(p, 2))
-- EXECUTION TIME:
0.20893
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 4
    print(round(p, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:39:32) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("valor das esfirras: "))
total= q*v
print(round(total, 2))
-- EXECUTION TIME:
0.163063
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
14.0
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:39:38) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("valor das esfirras: "))
total= q * v
print(round(total, 2))
-- EXECUTION TIME:
0.161448
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
14.0
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:40:49) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
e= 1.50*2+v
print(round(e, 2))
-- EXECUTION TIME:
0.196869
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
6.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:40:52) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
e= 1.50*2+v
print(round(e, 2))
-- EXECUTION TIME:
0.133124
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
6.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:41:01) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
e= 1.50*2+v
print(round(e, 2))
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:41:17) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
e= 1.50*2+v
print(round(e, 2))
-- EXECUTION TIME:
0.232096
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
6.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:43:37) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
precofinal = 2*q+v
print(round(precofinal, 2))
-- EXECUTION TIME:
0.163806
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
11.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
13.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:43:40) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
precofinal = 2*q+v
print(round(precofinal, 2))
-- EXECUTION TIME:
0.171983
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
11.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
13.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:43:54) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
precofinal = 2*(q+v)
print(round(precofinal, 2))
-- EXECUTION TIME:
0.136545
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
12.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
15.0
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
16.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:45:39) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
precoesfirra= 2*1.50
total= precoesfirra+v
print(round(total, 2))
-- EXECUTION TIME:
0.200071
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
6.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:45:40) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
precoesfirra= 2*1.50
total= precoesfirra+v
print(round(total, 2))
-- EXECUTION TIME:
0.148725
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
6.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:45:41) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
precoesfirra= 2*1.50
total= precoesfirra+v
print(round(total, 2))
-- EXECUTION TIME:
0.142348
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
6.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:46:05) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
precoesfirra= 2*1.50
total= precoesfirra + v
print(round(total, 2))
-- EXECUTION TIME:
0.144275
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
6.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:47:15) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= v+q
print(round(total, 2))
-- EXECUTION TIME:
0.178607
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
7.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:47:16) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= v+q
print(round(total, 2))
-- EXECUTION TIME:
0.206193
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
7.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:47:21) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= v*q
print(round(total, 2))
-- EXECUTION TIME:
0.129426
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
14.0
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:47:22) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= v*q
print(round(total, 2))
-- EXECUTION TIME:
0.166398
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
14.0
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:35) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= v*q
print(round(total, 2))
-- OUTPUT:
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:48:09) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= v/q
print(round(total, 2))
-- EXECUTION TIME:
0.159676
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
1.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
0.88
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
0.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:48:12) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= v/q
print(round(total, 2))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:48:52) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= v+q
print(round(total, 2))
-- EXECUTION TIME:
0.153028
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
7.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:48:54) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= v+q
print(round(total, 2))
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:49:21) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= 2*q+v
print(round(total, 2))
-- EXECUTION TIME:
0.147372
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
11.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
13.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:49:23) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= 2*q+v
print(round(total, 2))
-- OUTPUT:
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:49:47) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= (2*q)+v
print(round(total, 2))
-- EXECUTION TIME:
0.206437
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
11.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
13.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:49:48) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= (2*q)+v
print(round(total, 2))
-- EXECUTION TIME:
0.108305
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
9.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
11.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
13.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:49:49) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= (2*q)+v
print(round(total, 2))
-- OUTPUT:
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:50:46) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= 1,5*Q+V
print(round(total, 2))
-- EXECUTION TIME:
0.223491
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2927/main.py", line 3, in <module>
    total= 1,5*Q+V
NameError: name 'Q' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:50:48) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= 1,5*Q+V
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total= 1,5*Q+V
NameError: name 'Q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:51:03) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= 1.5*Q+V
print(round(total, 2))
-- EXECUTION TIME:
0.26587
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2927/main.py", line 3, in <module>
    total= 1.5*Q+V
NameError: name 'Q' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:51:04) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= 1.5*Q+V
print(round(total, 2))
-- EXECUTION TIME:
0.122973
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1616/2927/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:51:05) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= 1.5*Q+V
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total= 1.5*Q+V
NameError: name 'Q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:51:41) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= 1.5*q+v
print(round(total, 2))
-- EXECUTION TIME:
0.218402
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
7.5
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
9.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
10.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:51:41) 
-- CODE:
v=float(input("valor da bebida: "))
q=int(input("quantidade de esfirras: "))
total= 1.5*q+v
print(round(total, 2))
-- EXECUTION TIME:
0.187918
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
7.5
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
9.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
10.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
